package cartes;

public interface Attaquable {
    public void subirDegats(int degats);
    public boolean estDetruite();
}
