package cartes;

public class Corbeau extends CarteAnimal{
    public Corbeau(){
        super("Corbeau", 3, 2, 2, 0, true);
    }
}
