package cartes;

public class Coyote extends CarteAnimal{
    public Coyote(){
        super("Coyote", 1, 2, 0, 4, false);
    }
}
