package cartes;

public class Ecureuil extends CarteAnimal{
    public Ecureuil(){
        super("Ecureuil", 1, 0, 0, 0, false);
    }
}
