package cartes;

public class Loup extends CarteAnimal{
    public Loup(){
        super("Loup", 2, 3, 2, 0, false);
    }
}
