package cartes;

public class Louveteau extends CarteAnimal{
    public Louveteau(){
        super("Louveteau", 1, 1, 1, 0, false);
    }
}
