package cartes;

public class Moineau extends CarteAnimal{
    public Moineau(){
        super("Moineau", 2, 1, 1, 0, true);
    }
}
