package cartes;

public class Sapin extends CarteObstacle{
    public Sapin(){
        super("Sapin", 3);
    }
}
