package jeu;

public class Jeu {
    private int m_nbPartiesGagneesJoueur;
    private int m_nbPartiesGagneesIA;
    private Partie m_partieCourante;

    public void lancerJeu() {
        //lancer la partie
    }

    public void lancerNouvellePartie() {
        //lancer une nouvelle partie
    }

    public boolean verifierVictoireFinale() {
        return true; //trouver un moyen de vérifier la victoire d'un joueur
    }
}
